compiler/testData/diagnostics/tests/jvm/duplicateJvmSignature/accidentalOverrides/classFunctionOverriddenByProperty.kt
// RUN_PIPELINE_TILL: BACKEND
open class B {
    fun getX() = 1
}

class C : B() {
    val x: Int
        <!ACCIDENTAL_OVERRIDE!>get() = 1<!>
}

/* GENERATED_FIR_TAGS: classDeclaration, functionDeclaration, getter, integerLiteral, propertyDeclaration */
